# PROJEKT_NP

./: CMakeListS.txt  CMakeLists.txt  CMakeListsTest.txt  CMakeTest.txt  Harmonogram.docx  Paragony w Restauracji Kiliana Kozioł.txt  README.md  Readme.txt
.github/workflows/: CI main.yml  cmake.yml  main.yml
CMakeProject/: CMakeLists.txt
CMakeProject/CMakeProject/: CMakeLists.txt  CMakeProject.cpp  CMakeProject.h
receipt_at_the_restaurant_code/: receipt_at_the_restaurant_code.sln
receipt_at_the_restaurant_code/receipt_at_the_restaurant_code/: dishesList.cpp  dishesList.h  dishesList.hpp  ordersMid.cpp  ordersMid.h  receipt_at_the_restaurant_code.cpp  receipt_at_the_restaurant_code.vcxproj  receipt_at_the_restaurant_code.vcxproj.filters
receipt_at_the_restaurant_code/receipt_at_the_restaurant_code/x64/Debug/: receipt_at_the_restaurant_code.exe.recipe  receipt_at_the_restaurant_code.ilk  receipt_at_the_restaurant_unit_tests.ilk  receipt_at_the_restaurant_unit_tests.pch  vc142.idb  vc143.idb
receipt_at_the_restaurant_code/receipt_at_the_restaurant_code/x64/Debug/receipt_.65FBE0A8.tlog/: CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  receipt_at_the_restaurant_unit_tests.write.1u.tlog
receipt_at_the_restaurant_code/receipt_at_the_restaurant_unit_tests/: receipt_at_the_restaurant_unit_tests.cpp  receipt_at_the_restaurant_unit_tests.vcxproj  receipt_at_the_restaurant_unit_tests.vcxproj.filters
receipt_at_the_restaurant_code/receipt_at_the_restaurant_unit_tests/x64/Debug/: receipt_at_the_restaurant_unit_tests.dll.recipe  vc142.idb
(+10 files in other folders)
